[package]
name = "ubilerntui"
version = "0.1.8"
edition = "2021"
authors = ["Adam McKellar"]
description = "This is a terminal UI for learning for the UKW-Sprechfunkzeugnis für den Binnenschiffahrtsfunk."
license = "GPL-3.0-or-later"
readme = "./README.md"
repository = "https://github.com/WyvernIXTL/ubilerntui"
keywords = ["lernen", "ubi", "ukw", "binnenschiffahrt", "sprechfunkzeugnis"]
categories = ["command-line-utilities"]


[dependencies]
tracing = {version = "0.1", features = ["release_max_level_info"]}
tracing-subscriber = {version = "0.3", features = ["json", "env-filter"]}
color-eyre = "0.6.3"
directories = "5.0.1"
tracing-error = "0.2.0"
chrono = "0.4.38"
crossterm = "0.28.1"
ratatui = "0.27.0"
rusqlite = {version = "0.32.1", features = ["bundled"]}
rand = "0.8.5"
clap = "4.5.13"
pdf-extract = "0.7.10"
regex = "1.11.0"
once_cell = "1.19.0"
colored = "2.1.0"
textwrap = {version = "0.16.1", features = ["hyphenation"]}
hyphenation = "0.8.4"
license-fetcher = "0.5.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
license-fetcher = { version = "0.5.0", features = ["build"] }

[package.metadata.deb]
maintainer = "Adam McKellar <dev@mckellar.eu>"
copyright = "2024, Adam McKellar"
changelog = "CHANGELOG.md"
section = "education"
priority = "optional"
license-file = "./LICENSE.txt"

