[package]
name = "ubilerntui"
version = "0.1.10"
edition = "2021"
authors = ["Adam McKellar"]
description = "This is a terminal UI for learning for the UKW-Sprechfunkzeugnis für den Binnenschiffahrtsfunk."
license = "GPL-3.0-or-later"
readme = "./README.md"
repository = "https://github.com/WyvernIXTL/ubilerntui"
keywords = ["lernen", "ubi", "ukw", "binnenschiffahrt", "sprechfunkzeugnis"]
categories = ["command-line-utilities"]


[dependencies]
tracing = {version = "0.1.44", features = ["release_max_level_info"]}
tracing-subscriber = {version = "0.3.23", features = ["json", "env-filter"]}
color-eyre = "0.6.5"
directories = "6.0.0"
tracing-error = "0.2.1"
chrono = "0.4.45"
crossterm = "0.29.0"
ratatui = "0.27.0"
rusqlite = {version = "0.32.1", features = ["bundled"]}
rand = "0.9.4"
clap = "4.6.1"
pdf-extract = "0.10.0"
once_cell = "1.21.4"
colored = "3.1.1"
textwrap = {version = "0.16.2", features = ["hyphenation"]}
hyphenation = "0.8.4"
license-fetcher = "0.9.3"
fancy-regex = "0.17.0"

[dev-dependencies]
pretty_assertions = "1.4.1"

[build-dependencies]
license-fetcher = { version = "0.9.3", features = ["build"] }

[package.metadata.deb]
maintainer = "Adam McKellar <dev@mckellar.eu>"
copyright = "2024, Adam McKellar"
changelog = "CHANGELOG.md"
section = "education"
priority = "optional"
license-file = "./LICENSE.txt"

